fix build, target Java 23